[project]
name = "stpage-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Optimista", email = "chicoptimista@gmail.com" }
]
dependencies = [
    "st-pages>=0.4.4",
    "streamlit>=1.25.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
